# orla

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  MAINTAINERS.md  Makefile  README.md  go.mod  go.sum  justfile  orla.code-workspace  pyrightconfig.json  sqlc.yaml
.githooks/: README.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  pyorla-ci.yml  pyorla-publish.yml  release.yml
cmd/orla/: agent_cmd.go  daemon_cmd.go  main.go
deploy/: README.md  docker-compose.dag-math.yaml  docker-compose.ollama.yaml  docker-compose.sglang.yaml  docker-compose.swebench-baseline.yaml  docker-compose.swebench-lite.vllm.yaml  docker-compose.swebench-lite.yaml  docker-compose.vllm.yaml  docker-compose.workflow-demo.vllm.yaml  orla-ollama.yaml  orla-sglang.yaml  orla-vllm.yaml
docs/: braid-extension-plan.md  daemon.md  openapi.yaml  personas.md  plan.md  proxy.md  quickstart.md  rl.md  storage.md
docs/rfcs/: rfc5.txt
examples/: README.md
examples/concurrent_stages_demo/: concurrent_stages_demo.go
examples/dag_math_eval/: Dockerfile  Makefile  entrypoint.sh
examples/hotpotqa-distractor/: .gitignore  README.md  agent.py  justfile  pyproject.toml  run.py
examples/memory_manager_demo/: memory_manager_demo.go
examples/swe_bench_lite/: Dockerfile  Makefile  entrypoint.sh
examples/swe_bench_lite/cache_strategy/mini_swe_agent/: pyproject.toml  run.bash
examples/workflow_demo/: workflow_demo.go
internal/agent/: agent_test.go  client_test.go  executor.go  executor_test.go  inprocess_client.go  loop.go  loop_test.go  mocks.go
internal/api/: backends.go  backends_test.go  errors.go  feedback.go  feedback_test.go  health.go  health_test.go  integration_test.go  mapper.go  mapper_test.go  proxy.go  proxy_responseformat_test.go  proxy_test.go  server.go  server_test.go  stages.go  stages_test.go  tool.go  tool_test.go
internal/backends/: backend.go  fake_registry.go  registry.go  registry_test.go
internal/config/: agentic_serving.go  agentic_serving_test.go  config.go  config_test.go
internal/core/: envutils.go  envutils_test.go  logger.go  logger_test.go  types.go  types_test.go  utils.go  utils_test.go
internal/metrics/: collectors.go  metrics.go  metrics_test.go
internal/model/: cache_control.go  cache_control_test.go  ollama.go  ollama_integration_test.go  ollama_test.go  openai.go  openai_test.go  provider.go  provider_test.go  types.go  (+1 more)
pyorla/: LICENSE  README.md  pyproject.toml
pyorla/examples/access_control_demo/: run.py
pyorla/examples/hotpotqa_routing/: __init__.py  run.py
pyorla/examples/hotpotqa_routing_hybrid/: __init__.py  run.py
pyorla/examples/math_routing_onprem/: run.py
pyorla/examples/workflow_demo/: mock_tools.py  run_langgraph.py  run_workflow.py  schemas.py
pyorla/src/pyorla/: __init__.py  backend.py  chat_model.py  client.py  langchain_tools.py  local_server.py  memory.py  messages.py  stage.py  stage_mapping.py  tool_decorators.py  tool_output.py  tools.py  types.py  workflow.py
pyorla/tests/: test_chat_model.py  test_client.py  test_langchain_tools.py  test_local_server.py  test_messages.py  test_orla_tool.py  test_stage.py  test_stage_mapping.py
scripts/: install.sh  test-remote-ollama.sh
vhs/: demo.tape  demo_run.sh
(+138 files in other folders)
