[project]
name = "pyorla"
version = "1.0.5"
description = "Python SDK for Orla"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hayder Tirmazi" }]
requires-python = ">=3.11"
keywords = ["orla", "llm", "agent", "langchain", "langgraph", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.1",
    "langchain-core>=1.2.20",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/harvard-cns/orla"
Documentation = "https://orlaserver.github.io/#/docs/quickstart"
Repository = "https://github.com/harvard-cns/orla"
Issues = "https://github.com/harvard-cns/orla/issues"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ty>=0.0.25",
]
examples = ["datasets>=3.0.0", "docker>=7.1.0"]

# ty: https://docs.astral.sh/ty/ — run `uv run ty check` from this directory.
[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
python-version = "3.11"
python = ".venv"
extra-paths = ["src"]
